# backpropagation

./: README.md  pyproject.toml
article/: article.latex  backpropagation.latex  bibliography.bib  main.tex
src/: main.py
